--- a/demo/index.html
+++ b/demo/index.html
@@ -49,11 +49,28 @@
     <script type="module">
         import AIChat from '../src/js/index.js';
 
-        new AIChat({
-            container: '#chat-container',
-            apiUrl: 'https://chat.varman.pro/api/chat',
-            greeting: 'Привет! Я Лолита. Чем могу помочь???'
-        });
+        new AIChat(
+            {
+                apiOptions: {
+                    url: 'https://chat.varman.pro/api/chat',
+                    greeting: 'Привет! Чем могу помочь?'
+                },
+                themeOptions: {
+                    color: '#fff',
+                    size: 'large'
+                },
+                selectorsOptions: {
+                    container: '#chat-container',
+                    selectors: { /* ... */ },
+                    classes: { /* ... */ }
+                },
+                delayOptions: {
+                    greetDelay: 600,
+                    followupDelay: 15000
+                }
+            }
+
+        );
     </script>
 </body>
 
