--- a/demo/index.html
+++ b/demo/index.html
@@ -31,13 +31,12 @@
             <!-- Основное окно -->
             <div class="chatbox__wrapper">
                 <div class="chatbox__header">
-                    <span>Лолита — ваш помощник</span>
-                    <button class="chatbox__close">×</button>
+                    <span></span>
+                    <button class="chatbox__close"></button>
                 </div>
                 <div class="chatbox__messages-inner"></div>
                 <form class="chatbox__input-form">
                     <textarea class="chatbox__textarea" placeholder="Напишите сообщение..." rows="1"></textarea>
-                    <!-- <button type="submit" class="chatbox__send-button">➤</button> -->
                     <button type="submit" class="chatbox__send-button" tabindex="0" aria-label="Send">
                         <span class="chatbox__send-icon"></span>
                     </button>
