удаление мусора, мелкие правки

--- a/demo/index.html
+++ b/demo/index.html
@@ -65,7 +65,8 @@
                 },
                 delayOptions: {
                     greetDelay: 600,
-                    followupDelay: 15000
+                    followupDelay: 15000,
+                    toggleDelay: 4000
                 }
             }
 
