Правки по изменным данным из API

--- a/demo/index.html
+++ b/demo/index.html
@@ -52,6 +52,7 @@
             {
                 apiOptions: {
                     url: 'https://chat.varman.pro/api/chat',
+                    domain: 'varman.pro',
                     greeting: 'Привет! Чем могу помочь?'
                 },
                 themeOptions: {
