--- a/demo/index.html
+++ b/demo/index.html
@@ -53,13 +53,13 @@
         new AIChat(
             {
                 apiOptions: {
-                    url: 'https://chat.varman.pro/api/chat',
+                    url: 'https://chat.varman.pro/api/chat',//'https://this-domain-does-not-exist-12345.com',//'htttps://httpbin.org/status/406',//'https://chat.varman.pro/api/chat',
                     domain: 'varman.pro',
-                    greeting: 'Привет! Чем могу помочь?'
+                    debug: true
                 },
                 messagesOptions: {
                     greeting: {
-                        text: 'Привет! Чем могу помочь?',
+                        text: 'Привет! Я бот. Чем могу помочь?',
                         delay: 600
                     },
                     followup: {
@@ -101,10 +101,10 @@
                     classes: { /* ... */ }
                 },
                 delayOptions: {
-                    greetDelay: 600,
-                    followupDelay: 15000,
-                    toggleDelay: 1000
+                    chatShowDelay: 5000,
+                    toggleShowDelay: 1000
                 }
+
             }
 
         );
