--- a/demo/index.html
+++ b/demo/index.html
@@ -5,109 +5,157 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Chat Widget — Демо</title>
+    <!-- Сброс стилей и базовые стили для демонстрационной страницы -->
     <style>
         body {
             margin: 0;
-            font-family: -apple-system, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             background: #f0f2f5;
+            color: #333;
+            line-height: 1.6;
         }
 
         .container {
             max-width: 400px;
             margin: 40px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 
 <body>
+
     <div class="container">
         <h3>💬 AI Чат-бот — Песочница</h3>
         <p>Тестовая среда для разработки. Изменения в JS — мгновенно.</p>
+
+        <!-- Контейнер чат-виджета с data-атрибутами для JS-инициализации -->
         <div id="chat-container" class="chatbox" data-aichat-box>
 
-            <!-- Кнопка открытия -->
-            <button class="chatbox__toggle" data-aichat-toggle>💬</button>
+            <!-- Кнопка для открытия/закрытия чат-бокса -->
+            <button class="chatbox__toggle" data-aichat-toggle aria-label="Открыть чат">
+                💬
+            </button>
 
-            <!-- Основное окно -->
+            <!-- Основное окно чата (изначально скрыто) -->
             <div class="chatbox__wrapper" data-aichat-wrapper>
+                <!-- Заголовок чата с кнопкой закрытия -->
                 <div class="chatbox__header">
-                    <span></span>
-                    <button class="chatbox__close" data-aichat-close></button>
+                    <span>AI Ассистент</span>
+                    <button class="chatbox__close" data-aichat-close aria-label="Закрыть чат"></button>
                 </div>
+
+                <!-- Контейнер для сообщений (прокручивается при наполнении) -->
                 <div class="chatbox__messages-inner" data-aichat-messages-inner></div>
+
+                <!-- Форма ввода сообщения -->
                 <form class="chatbox__input-form" data-aichat-input-form>
                     <textarea class="chatbox__textarea" data-aichat-textarea placeholder="Напишите сообщение..."
-                        rows="1"></textarea>
+                        rows="1" aria-label="Текст сообщения"></textarea>
                     <button type="submit" class="chatbox__send-button" data-aichat-send-button tabindex="0"
-                        aria-label="Send">
-                        <span class="chatbox__send-icon"></span>
+                        aria-label="Отправить сообщение">
+                        <span class="chatbox__send-icon">➤</span>
                     </button>
+                </form>
             </div>
-
         </div>
     </div>
 
     <script type="module">
+        /**
+         * Импорт основного класса AIChat из локального модуля.
+         * Это центральный компонент виджета, управляющий состоянием, UI и API.
+         */
         import AIChat from '../src/js/index.js';
 
-        new AIChat(
-            {
-                apiOptions: {
-                    url: 'https://chat.varman.pro/api/chat',//'https://this-domain-does-not-exist-12345.com',//'htttps://httpbin.org/status/406',//'https://chat.varman.pro/api/chat',
-                    domain: 'varman.pro',
-                    debug: true
+        /**
+         * Инициализация экземпляра AIChat с настройками.
+         *
+         * @config {Object} apiOptions — параметры подключения к API
+         * @config {string} apiOptions.url — URL эндпоинта для отправки сообщений
+         * @config {string} apiOptions.domain — домен для проверки CORS и логики
+         * @config {boolean} apiOptions.debug — включить режим отладки (логи в консоль)
+         *
+         * @config {Object} messagesOptions — тексты системных сообщений
+         * @config {Object} messagesOptions.greeting — приветствие при открытии
+         * @config {Object} messagesOptions.followup — напоминание, если пользователь долго не пишет
+         * @config {Object} messagesOptions.fallback — сообщение при сбое
+         * @config {Object} messagesOptions.error — сообщение об ошибке
+         * @config {Object} messagesOptions.invite — приглашение написать (если используется)
+         * @config {Object} messagesOptions.reminder — напоминание (например, через N минут)
+         * @config {Object} messagesOptions.encouragement — поддерживающее сообщение
+         * @config {Object} messagesOptions.motivation — мотивационное сообщение
+         *
+         * @config {Object} themeOptions — визуальные настройки
+         * @config {string} themeOptions.color — основной цвет (может использоваться в будущем)
+         * @config {string} themeOptions.size — размер чата ('small', 'large')
+         *
+         * @config {Object} selectorsOptions — кастомизация селекторов (если нужно переопределить)
+         * @config {string} selectorsOptions.container — селектор контейнера чата
+         * @config {Object} selectorsOptions.selectors — объект селекторов для внутренних элементов
+         * @config {Object} selectorsOptions.classes — кастомные CSS-классы
+         *
+         * @config {Object} delayOptions — временные задержки
+         * @config {number} delayOptions.chatShowDelay — задержка показа чата после загрузки (в мс)
+         * @config {number} delayOptions.toggleShowDelay — задержка перед появлением кнопки-тумблера
+         */
+        new AIChat({
+            apiOptions: {
+                url: 'https://chat.varman.pro/api/chat', // API-эндпоинт для общения с ботом
+                domain: 'varman.pro',                    // домен для логики и проверок
+                debug: true                              // включить детальные логи в консоли
+            },
+            messagesOptions: {
+                greeting: {
+                    text: 'Привет! Я бот. Чем могу помочь?',
+                    delay: 600                            // задержка перед показом приветствия
                 },
-                messagesOptions: {
-                    greeting: {
-                        text: 'Привет! Я бот. Чем могу помочь?',
-                        delay: 600
-                    },
-                    followup: {
-                        text: 'Вы всё ещё думаете? Готова помочь!',
-                        delay: 15000
-                    },
-                    fallback: {
-                        text: 'Что-то пошло не так, позвоните нам',
-                        delay: 0
-                    },
-                    error: {
-                        text: 'Что-то пошло не так, позвоните нам',
-                        delay: 0
-                    },
-                    invite: {
-                        text: '',
-                        delay: 0
-                    },
-                    reminder: {
-                        text: '',
-                        delay: 0
-                    },
-                    encouragement: {
-                        text: '',
-                        delay: 0
-                    },
-                    motivation: {
-                        text: '',
-                        delay: 0
-                    }
+                followup: {
+                    text: 'Вы всё ещё думаете? Готова помочь!',
+                    delay: 15000                          // 15 секунд бездействия
                 },
-                themeOptions: {
-                    color: '#fff',
-                    size: 'large'
+                fallback: {
+                    text: 'Что-то пошло не так, позвоните нам',
+                    delay: 0                              // показывается сразу при ошибке
                 },
-                selectorsOptions: {
-                    container: '#chat-container',
-                    selectors: { /* ... */ },
-                    classes: { /* ... */ }
+                error: {
+                    text: 'Что-то пошло не так, позвоните нам',
+                    delay: 0
                 },
-                delayOptions: {
-                    chatShowDelay: 5000,
-                    toggleShowDelay: 1000
+                invite: {
+                    text: '',
+                    delay: 0
+                },
+                reminder: {
+                    text: '',
+                    delay: 0
+                },
+                encouragement: {
+                    text: '',
+                    delay: 0
+                },
+                motivation: {
+                    text: '',
+                    delay: 0
                 }
-
+            },
+            themeOptions: {
+                color: '#fff',
+                size: 'large'
+            },
+            selectorsOptions: {
+                container: '#chat-container',
+                selectors: { /* Позволяет переопределять data-атрибуты или классы */ },
+                classes: { /* Кастомные CSS-классы при необходимости */ }
+            },
+            delayOptions: {
+                chatShowDelay: 5000,      // Показ чата через 5 секунд после загрузки
+                toggleShowDelay: 1000     // Кнопка-тумблер появляется через 1 секунду
             }
-
-        );
+        });
     </script>
 </body>
 
