правки вывода тектстов ошибобк

--- a/demo/index.html
+++ b/demo/index.html
@@ -118,7 +118,7 @@
                     delay: 15000                          // 15 секунд бездействия
                 },
                 fallback: {
-                    text: 'Что-то пошло не так, позвоните нам',
+                    text: 'Что-то пошло не так, позвоните нам <a href="tel:+79258467575">+79258467575</a>',
                     delay: 0                              // показывается сразу при ошибке
                 },
                 error: {
