рефакторинг, правки, ресайз
- ресайс окна чата на мобильных при открытии клавиатуры
- единая точка доступа к логгеру
- исправление багов

--- a/demo/index.html
+++ b/demo/index.html
@@ -57,7 +57,7 @@
                         rows="1" aria-label="Текст сообщения"></textarea>
                     <button type="submit" class="chatbox__send-button" data-aichat-send-button tabindex="0"
                         aria-label="Отправить сообщение">
-                        <span class="chatbox__send-icon">➤</span>
+                        <span class="chatbox__send-icon"></span>
                     </button>
                 </form>
             </div>
