--- a/demo/index.html
+++ b/demo/index.html
@@ -38,6 +38,9 @@
             <!-- Кнопка для открытия/закрытия чат-бокса -->
             <button class="chatbox__toggle" data-aichat-toggle aria-label="Открыть чат">
                 💬
+                <span class="chatbox__welcome-tip" data-aichat-welcome-tip>
+                    Готов помочь! Нажмите, чтобы начать чат
+                </span>
             </button>
 
             <!-- Основное окно чата (изначально скрыто) -->
@@ -52,9 +55,9 @@
                 <div class="chatbox__messages-inner" data-aichat-messages-inner></div>
 
                 <!-- Форма ввода сообщения -->
-                <form class="chatbox__input-form" data-aichat-input-form>
-                    <textarea class="chatbox__textarea" data-aichat-textarea placeholder="Напишите сообщение..."
-                        rows="1" aria-label="Текст сообщения"></textarea>
+                <form id="chatbox__input-form" class="chatbox__input-form" data-aichat-input-form>
+                    <textarea name="chatbox__textarea" class="chatbox__textarea" data-aichat-textarea
+                        placeholder="Напишите сообщение..." rows="1" aria-label="Текст сообщения"></textarea>
                     <button type="submit" class="chatbox__send-button" data-aichat-send-button tabindex="0"
                         aria-label="Отправить сообщение">
                         <span class="chatbox__send-icon"></span>
@@ -140,7 +143,12 @@
                 motivation: {
                     text: '',
                     delay: 0
-                }
+                },
+                welcome: {
+                    text: 'Добрый день.  Я могу помочь вам определиться с выбором. Напишите мне.',
+                    delay: 0,
+                    duration: 8000,
+                },
             },
             themeOptions: {
                 color: '#fff',
@@ -152,7 +160,7 @@
                 classes: { /* Кастомные CSS-классы при необходимости */ }
             },
             delayOptions: {
-                chatShowDelay: 5000,      // Показ чата через 5 секунд после загрузки
+                chatShowDelay: 0,      // Показ чата через 5 секунд после загрузки
                 toggleShowDelay: 1000     // Кнопка-тумблер появляется через 1 секунду
             }
         });
