Переделка вывода и логики WelcomeTip
- вынос логики в отдельный класс
- правки стилей
- реакция на дополнительные события
- отладка появления сообщений

--- a/demo/index.html
+++ b/demo/index.html
@@ -149,6 +149,11 @@
                     delay: 0,
                     duration: 8000,
                 },
+                returning: {
+                    text: 'Вы всё ещё думаете?',
+                    delay: 0,
+                    duration: 8000,
+                },
             },
             themeOptions: {
                 color: '#fff',
