--- a/demo/index.html
+++ b/demo/index.html
@@ -111,50 +111,39 @@
                 domain: 'varman.pro',                    // домен для логики и проверок
                 debug: true                              // включить детальные логи в консоли
             },
-            messagesOptions: {
-                greeting: {
-                    text: 'Привет! Я бот. Чем могу помочь?',
-                    delay: 600                            // задержка перед показом приветствия
-                },
-                followup: {
-                    text: 'Вы всё ещё думаете? Готова помочь!',
-                    delay: 15000                          // 15 секунд бездействия
-                },
-                fallback: {
-                    text: 'Что-то пошло не так, позвоните нам <a href="tel:+79258467575">+79258467575</a>',
-                    delay: 0                              // показывается сразу при ошибке
-                },
-                error: {
-                    text: 'Что-то пошло не так, позвоните нам',
-                    delay: 0
-                },
-                invite: {
-                    text: '',
-                    delay: 0
-                },
-                reminder: {
-                    text: '',
-                    delay: 0
-                },
-                encouragement: {
-                    text: '',
-                    delay: 0
-                },
-                motivation: {
-                    text: '',
-                    delay: 0
-                },
-                welcome: {
-                    text: 'Добрый день.  Я могу помочь вам определиться с выбором. Напишите мне.',
-                    delay: 0,
-                    duration: 8000,
-                },
-                returning: {
-                    text: 'Вы всё ещё думаете?',
-                    delay: 0,
-                    duration: 8000,
-                },
-            },
+            // messagesOptions: {
+            //     inChat: {
+            //         greeting: {
+            //             text: 'Привет! Я бот. Чем могу помочь?',
+            //             delay: 600                            // задержка перед показом приветствия
+            //         },
+            //         followup: {
+            //             text: 'Вы всё ещё думаете? Готова помочь!',
+            //             delay: 15000                          // 15 секунд бездействия
+            //         },
+            //         fallback: {
+            //             text: 'Что-то пошло не так, позвоните нам <a href="tel:+79258467575">+79258467575</a>',
+            //             delay: 0                              // показывается сразу при ошибке
+            //         },
+            //         error: {
+            //             text: 'Что-то пошло не так, позвоните нам',
+            //             delay: 0
+            //         },
+            //     },
+            //     outChat: {
+            //         welcome: {
+            //             text: 'Готов помочь! Нажмите, чтобы начать чат',
+            //             delay: 3000,
+            //             duration: 4000,
+            //             disable: false,
+            //         },
+            //         returning: {
+            //             text: 'Вы всё ещё думаете?',
+            //             delay: 0,
+            //             duration: 8000,
+            //         },
+            //     },
+            // },
             themeOptions: {
                 color: '#fff',
                 size: 'large'
