правки верстки демо

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,41 +32,106 @@
         <h3>💬 AI Чат-бот — Песочница</h3>
         <p>Тестовая среда для разработки. Изменения в JS — мгновенно.</p>
 
-        <!-- Контейнер чат-виджета с data-атрибутами для JS-инициализации -->
-        <div id="chat-container" class="chatbox" data-aichat-box>
 
-            <!-- Кнопка для открытия/закрытия чат-бокса -->
-            <button class="chatbox__toggle" data-aichat-toggle aria-label="Открыть чат">
-                💬
-                <span class="chatbox__welcome-tip" data-aichat-welcome-tip>
-                    Готов помочь! Нажмите, чтобы начать чат
-                </span>
-            </button>
-
-            <!-- Основное окно чата (изначально скрыто) -->
-            <div class="chatbox__wrapper" data-aichat-wrapper>
-                <!-- Заголовок чата с кнопкой закрытия -->
-                <div class="chatbox__header">
-                    <span>AI Ассистент</span>
-                    <button class="chatbox__close" data-aichat-close aria-label="Закрыть чат"></button>
-                </div>
-
-                <!-- Контейнер для сообщений (прокручивается при наполнении) -->
-                <div class="chatbox__messages-inner" data-aichat-messages-inner></div>
-
-                <!-- Форма ввода сообщения -->
-                <form id="chatbox__input-form" class="chatbox__input-form" data-aichat-input-form>
-                    <textarea name="chatbox__textarea" class="chatbox__textarea" data-aichat-textarea
-                        placeholder="Напишите сообщение..." rows="1" aria-label="Текст сообщения"></textarea>
-                    <button type="submit" class="chatbox__send-button" data-aichat-send-button tabindex="0"
-                        aria-label="Отправить сообщение">
-                        <span class="chatbox__send-icon"></span>
-                    </button>
-                </form>
-            </div>
-        </div>
     </div>
 
+    <div class="container">
+        <h3>💬 AI Чат-бот — Песочница</h3>
+        <p>Тестовая среда для разработки. Изменения в JS — мгновенно.</p>
+
+
+    </div>
+
+    <div class="container">
+        <h3>💬 AI Чат-бот — Песочница</h3>
+        <p>Тестовая среда для разработки. Изменения в JS — мгновенно.</p>
+
+
+    </div>
+
+    <div class="container">
+        <h3>💬 AI Чат-бот — Песочница</h3>
+        <p>Тестовая среда для разработки. Изменения в JS — мгновенно.</p>
+
+
+    </div>
+
+    <div class="container">
+        <h3>💬 AI Чат-бот — Песочница</h3>
+        <p>Тестовая среда для разработки. Изменения в JS — мгновенно.</p>
+
+
+    </div>
+
+    <div class="container">
+        <h3>💬 AI Чат-бот — Песочница</h3>
+        <p>Тестовая среда для разработки. Изменения в JS — мгновенно.</p>
+
+
+    </div>
+
+    <div class="container">
+        <h3>💬 AI Чат-бот — Песочница</h3>
+        <p>Тестовая среда для разработки. Изменения в JS — мгновенно.</p>
+
+
+    </div>
+
+    <div class="container">
+        <h3>💬 AI Чат-бот — Песочница</h3>
+        <p>Тестовая среда для разработки. Изменения в JS — мгновенно.</p>
+
+
+    </div>
+
+    <div class="container">
+        <h3>💬 AI Чат-бот — Песочница</h3>
+        <p>Тестовая среда для разработки. Изменения в JS — мгновенно.</p>
+
+
+    </div>
+
+    <div class="container">
+        <h3>💬 AI Чат-бот — Песочница</h3>
+        <p>Тестовая среда для разработки. Изменения в JS — мгновенно.</p>
+
+
+    </div>
+
+
+    <!-- Контейнер чат-виджета с data-атрибутами для JS-инициализации -->
+    <div id="chat-container" class="chatbox" data-aichat-box>
+
+        <!-- Кнопка для открытия/закрытия чат-бокса -->
+        <button class="chatbox__toggle" data-aichat-toggle aria-label="Открыть чат">
+            💬
+            <span class="chatbox__welcome-tip" data-aichat-welcome-tip>
+                Готов помочь! Нажмите, чтобы начать чат
+            </span>
+        </button>
+
+        <!-- Основное окно чата (изначально скрыто) -->
+        <div class="chatbox__wrapper" data-aichat-wrapper>
+            <!-- Заголовок чата с кнопкой закрытия -->
+            <div class="chatbox__header">
+                <span>AI Ассистент</span>
+                <button class="chatbox__close" data-aichat-close aria-label="Закрыть чат"></button>
+            </div>
+
+            <!-- Контейнер для сообщений (прокручивается при наполнении) -->
+            <div class="chatbox__messages-inner" data-aichat-messages-inner></div>
+
+            <!-- Форма ввода сообщения -->
+            <form id="chatbox__input-form" class="chatbox__input-form" data-aichat-input-form>
+                <textarea name="chatbox__textarea" class="chatbox__textarea" data-aichat-textarea
+                    placeholder="Напишите сообщение..." rows="1" aria-label="Текст сообщения"></textarea>
+                <button type="submit" class="chatbox__send-button" data-aichat-send-button tabindex="0"
+                    aria-label="Отправить сообщение">
+                    <span class="chatbox__send-icon"></span>
+                </button>
+            </form>
+        </div>
+    </div>
     <script type="module">
         /**
          * Импорт основного класса AIChat из локального модуля.
